# helix

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
agents/: config.py  event_bus.py  main.py  pyproject.toml  requirements.txt
agents/graphs/: ab_variation_graph.py  content_graph.py  curator_graph.py  reference_dna_graph.py  state.py
agents/prompts/: library.py  system_prompts.py
agents/tools/: db.py  django_api.py  llm.py
backend/: manage.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/agent_runs/: admin.py  apps.py  consumers.py  internal_views.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py  ws_auth.py
backend/apps/agent_runs/migrations/: 0001_initial.py  0002_alter_agentrun_kind.py
backend/apps/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/billing/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/billing/migrations/: 0001_initial.py
backend/apps/brands/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/brands/migrations/: 0001_initial.py
backend/apps/brands/services/: __init__.py  ingest.py
backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/content/migrations/: 0001_initial.py  0002_postvariant_hook_strategy.py
backend/apps/media/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/media/migrations/: 0001_initial.py
backend/apps/publishing/: admin.py  models.py  oauth.py  serializers.py  urls.py  views.py
backend/apps/publishing/migrations/: 0001_initial.py
backend/apps/workspaces/: admin.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/workspaces/migrations/: 0001_initial.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
(+45 files in other folders)
